Update java-gc.md